rendered/envs/alpha/octo-sts/deployment-octo-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: octo-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: octo-sts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octo-sts
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PORT
              value: "8080"
            - name: STS_DOMAIN
              value: sts.zebradil.dev
            - name: APP_CONFIG_FILE
              value: /etc/octo-sts/apps.yaml
            - name: METRICS
              value: "false"
            - name: OCTOSTS_ALLOWED_ISSUERS
              value: https://token.actions.githubusercontent.com
          image: oci.zebradil.dev/ghcr.io-cache/zebradil/octo-sts@sha256:de80fb0486dd0448d1f1af28895b39b2a7f2ca4e440906e5de66dea2f80a078d
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 15
          name: octo-sts
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/octo-sts
              name: config
              readOnly: true
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - configMap:
            name: octo-sts
          name: config
