rendered/envs/alpha/octo-sts/ingressroute-octo-sts.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: octo-sts
spec:
  entryPoints:
    - web
    - websecure
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`sts.zebradil.dev`) && (Path(`/`) || Path(`/sts/exchange`))
      services:
        - name: octo-sts
          port: http
